--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "nim",
+  "name": "react-dots-and-boxes",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://SebastianHGonzalez.github.io/ReactDotsAndBoxes",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -15,6 +16,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "jest",
     "eject": "react-scripts eject"
   },
@@ -34,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^2.0.1",
     "redux-devtools-extension": "^2.13.8"
   }
 }
